--- a/index.html
+++ b/index.html
@@ -1,35 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Profile card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Profile card component</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-  Victor Crest
-  26
-  London
+  <div class="container">
+    <div class="card">
+      <div class="image-container">
+      <img class="card-top" src="images/bg-pattern-card.svg" alt="card-top">
 
-  80K
-  Followers
+      <img class="profile-picture" src="images/image-victor.jpg">
+    </div>
 
-  803K
-  Likes
+      <div>
+      <div class="personal-info">
+        <div class="name">
+          <h2>Victor Crest</h2>
+        </div>
+        <div class="age">
+          <p>26</p>
+        </div>
 
-  1.4K
-  Photos
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+      </div>
+
+      <div class="city">
+
+        <p>London</p>
+        
+      </div>
+      <hr class="solid">
+      <div class="metrics-container">
+        <div class="followers">
+          <h2>80K</h2>
+          <p>Followers</p>
+        </div>
+        <div class="likes">
+          <h2>803K</h2>
+          <p>Likes</p>
+        </div>
+        <div class="photos">
+          <h2>1.4K</h2>
+          <p>Photos</p>
+        </div>
+      </div>
+    </div>
+    </div>
 </body>
+
 </html>
